--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>ratchet</artifactId>
-    <version>2.0.2-SNAPSHOT</version>
+    <version>2.0.2</version>
     <name>Ratchet</name>
     <description>WebJar for Ratchet</description>
     <url>http://webjars.org</url>
@@ -50,7 +50,7 @@
         <url>http://github.com/webjars/ratchet</url>
         <connection>scm:git:https://github.com/webjars/ratchet.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/ratchet.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>ratchet-2.0.2</tag>
     </scm>
     
     <build>
